# ai-agent-experiments

./: .env.template  .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  rag.ipynb
ai_agent_experiments/: chat_bot.py  config.py  faiss_store.py  hello_world.py  lesson-06-agentic-workflows.ipynb  lesson_01_basic_azure_openai.py  lesson_02_react_pattern.py  lesson_03_langchain_basics.py  lesson_04_tool_calling_mcp.py  lesson_05_langgraph_advanced.py  mcp_stdio_client.py  mcp_streamable_client.py  rea_act_agent.py  research_agent.py  utils.py
references/: references.ipynb
tools/: hello_service.py  research-mcp-server.py
