[tool.poetry]
name = "ai-agent-experiments"
version = "0.1.0"
description = ""
authors = ["pavithrakamath"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.15"
openai = "^1.108.0"
requests = "^2.32.5"
python-dotenv = "^1.1.1"
mcp = "^1.14.1"
arxiv = "^2.2.0"
wikipedia-api = "^0.8.1"
numpy = "^2.3.3"
faiss-cpu = "^1.12.0"
pymupdf = "^1.26.4"
langchain = "^0.3.27"
langchain-azure-ai = "^0.1.5"
langgraph = "^0.6.8"
langchain-tavily = "^0.2.11"
matplotlib = "^3.10.7"
anthropic = "^0.69.0"
pandas = "^2.3.3"
ipython = "^9.6.0"
notebook = "^7.4.7"
jupyter-cache = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
